<resources>
    <string name="app_name">PullRequestSample</string>
    <string name="toast_greeting">Greeting</string>
    <string name="main_button">Change the world!</string>
</resources>