package kr.eunicehong.pullrequestsample.view


import android.view.View
import android.view.ViewGroup
import androidx.test.espresso.Espresso.onView
import androidx.test.espresso.action.ViewActions.click
import androidx.test.espresso.assertion.ViewAssertions.matches
import androidx.test.espresso.matcher.ViewMatchers.*
import androidx.test.filters.LargeTest
import androidx.test.rule.ActivityTestRule
import androidx.test.runner.AndroidJUnit4
import kr.eunicehong.pullrequestsample.R
import org.hamcrest.Description
import org.hamcrest.Matcher
import org.hamcrest.Matchers.allOf
import org.hamcrest.TypeSafeMatcher
import org.junit.Rule
import org.junit.Test
import org.junit.runner.RunWith

@LargeTest
@RunWith(AndroidJUnit4::class)
class MainActivityTest {

    @Rule
    @JvmField
    var mActivityTestRule = ActivityTestRule(MainActivity::class.java)

    @Test
    fun mainActivityTest() {
        val materialButton = onView(
            allOf(
                withId(R.id.change_message_button),
                withText("Change the world!"),
                childAtPosition(childAtPosition(withId(android.R.id.content), 0), 2),
                isDisplayed()
            )
        )
        materialButton.perform(click())

        val materialButton2 = onView(
            allOf(
                withId(R.id.change_message_button), withText("Change the world!"),
                childAtPosition(childAtPosition(withId(android.R.id.content), 0), 2),
                isDisplayed()
            )
        )
        materialButton2.perform(click())

        val materialButton3 = onView(
            allOf(
                withId(R.id.change_message_button), withText("Change the world!"),
                childAtPosition(childAtPosition(withId(android.R.id.content), 0), 2),
                isDisplayed()
            )
        )
        materialButton3.perform(click())

        val materialButton4 = onView(
            allOf(
                withId(R.id.change_message_button), withText("Change the world!"),
                childAtPosition(childAtPosition(withId(android.R.id.content), 0), 2),
                isDisplayed()
            )
        )
        materialButton4.perform(click())

        val materialButton5 = onView(
            allOf(
                withId(R.id.change_message_button), withText("Change the world!"),
                childAtPosition(childAtPosition(withId(android.R.id.content), 0), 2),
                isDisplayed()
            )
        )
        materialButton5.perform(click())

        val messageView = onView(
            allOf(
                withParent(
                    allOf(
                        withId(R.id.message),
                        isDisplayed()
                    )
                ),
                isDisplayed()
            )
        )
        val textView = onView(
            allOf(
                withText("PullRequestSample"),
                withParent(
                    allOf(
                        withId(R.id.action_bar),
                        withParent(withId(R.id.action_bar_container))
                    )
                ),
                isDisplayed()
            )
        )
    }

    private fun childAtPosition(
        parentMatcher: Matcher<View>, position: Int
    ): Matcher<View> {

        return object : TypeSafeMatcher<View>() {
            override fun describeTo(description: Description) {
                description.appendText("Child at position $position in parent ")
                parentMatcher.describeTo(description)
            }

            public override fun matchesSafely(view: View): Boolean {
                val parent = view.parent
                return parent is ViewGroup && parentMatcher.matches(parent)
                        && view == parent.getChildAt(position)
            }
        }
    }
}
